# Learn-Rust-in-a-month-lunches-finished-projects

./: README.md
Laser_pointer_in_file_navigator/: Cargo.toml
Laser_pointer_in_file_navigator/src/: main.rs
directory_and_file_navigator/: Cargo.toml
directory_and_file_navigator/src/: main.rs
laser_pointer/: Cargo.toml
laser_pointer/src/: main.rs
laser_pointer_Iced/: Cargo.toml
laser_pointer_Iced/src/: main.rs
terminal_stopwatch_and_clock_1/: Cargo.toml
terminal_stopwatch_and_clock_1/src/: main.rs
typing_tutor_1/src/: main.rs
web_server_web-guessing_game_actix_web/: Cargo.toml
web_server_web-guessing_game_actix_web/src/: main.rs
web_server_web-guessing_game_axum/: Cargo.toml
web_server_web-guessing_game_axum/axum-server/: Cargo.toml
web_server_web-guessing_game_axum/axum-server/src/: main.rs
web_server_web-guessing_game_axum/src/: main.rs
web_server_web-guessing_game_rocket/: Cargo.toml
web_server_web-guessing_game_rocket/src/: main.rs
wikipedia_article_summary_searcher_1/: Cargo.toml  wikipedia_languages.csv
wikipedia_article_summary_searcher_1/src/: main.rs
